--- a/package.json
+++ b/package.json
@@ -39,12 +39,15 @@
     "echarts": "^5.4.1",
     "firebase": "^9.17.1",
     "jquery": "^3.6.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "morris.js": "^0.5.0",
     "ng-apexcharts": "^1.7.4",
     "ng-drag-drop": "^5.0.0",
     "ng-multiselect-dropdown": "^0.3.9",
     "ng2-charts": "^4.1.1",
     "ngx-bootstrap-spinner": "^10.0.5",
+    "ngx-chips": "^3.0.0",
     "ngx-echarts": "^15.0.1",
     "ngx-lightbox": "^3.0.0",
     "ngx-toastr": "^16.0.2",
